# motor-control

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
app/scheduler/: CMakeLists.txt
app/scheduler/inc/: scheduler.h
app/scheduler/src/: scheduler.c
app/tasks/: CMakeLists.txt
app/tasks/inc/: tasks.h
app/tasks/src/: tasks.c
app/timer/: CMakeLists.txt
app/timer/inc/: timer.h
app/timer/src/: timer.c
common/: CMakeLists.txt  status.h
drivers/: CMakeLists.txt
drivers/adc/: CMakeLists.txt
drivers/adc/inc/: drv_adc.h
drivers/adc/src/: drv_adc.c
drivers/bash/: lower_case.sh  organize_files.sh  prefix.sh
drivers/can/: CMakeLists.txt
drivers/can/inc/: drv_can.h
drivers/can/src/: drv_can.c
drivers/gpio/: CMakeLists.txt
drivers/gpio/inc/: drv_gpio.h
drivers/gpio/src/: drv_gpio.c
drivers/pwm/: CMakeLists.txt
drivers/pwm/inc/: drv_pwm.h
drivers/pwm/src/: drv_pwm.c
drivers/spi/: CMakeLists.txt
drivers/spi/inc/: drv_spi.h
drivers/spi/src/: drv_spi.c
hal/: CMakeLists.txt
hal/adc/: CMakeLists.txt
hal/adc/inc/: hal_adc.h
hal/adc/src/: hal_adc.c
hal/can/: CMakeLists.txt
hal/can/inc/: hal_can.h
hal/can/src/: hal_can.c
hal/gpio/: CMakeLists.txt
hal/gpio/inc/: hal_gpio.h
hal/gpio/src/: hal_gpio.c
hal/pwm/: CMakeLists.txt
hal/pwm/inc/: hal_pwm.h
hal/pwm/src/: hal_pwm.c
hal/spi/: CMakeLists.txt
hal/spi/inc/: hal_spi.h
hal/spi/src/: hal_spi.c
services/: CMakeLists.txt
services/gate_driver/: CMakeLists.txt
services/gate_driver/inc/: gate_driver.h
services/system_basis_chip/: CMakeLists.txt
(+3 files in other folders)
